Loading certain Jpeg causes system alert sound (Win32) #46051

Closed
opened 2015-09-08 21:12:41 +02:00 by Wolfgang Faehnle · 16 comments

Windows 10 Professional 64
Intel i5-4200U
Intel HD 4400
Driver 10.18.15.4256
Blender Buildbot 946b850

Short description of error
Image texture create sound with jpeg image

Exact steps for others to reproduce the error
Open Blender add material to cube, open node editor, add image texture node.
Open attached image in image node.
Does not happen in Linux.

sound_bug.blend

brown_leather_texture_by_beckas.jpg

Reported from Kasper^ in IRC.

Cheers, mib

Windows 10 Professional 64 Intel i5-4200U Intel HD 4400 Driver 10.18.15.4256 Blender Buildbot 946b850 **Short description of error** Image texture create sound with jpeg image **Exact steps for others to reproduce the error** Open Blender add material to cube, open node editor, add image texture node. Open attached image in image node. Does not happen in Linux. [sound_bug.blend](https://archive.blender.org/developer/F231523/sound_bug.blend) ![brown_leather_texture_by_beckas.jpg](https://archive.blender.org/developer/F231524/brown_leather_texture_by_beckas.jpg) Reported from Kasper^ in IRC. Cheers, mib

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

anyway on testing this on something other then windows 10?

anyway on testing this on something other then windows 10?

I am sorry, forgot to mention, Kasper^ report the issue on Windows 7.

I am sorry, forgot to mention, Kasper^ report the issue on Windows 7.
Member

ok, I cant test because the sound on so i my laptop is broken currently

ok, I cant test because the sound on so i my laptop is broken currently

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Campbell Barton self-assigned this 2015-09-09 09:06:10 +02:00

Please give exact details on what is happening.

  • Is this playing sound through your audio system?
  • How long does it play for, what kind of sound is it?
  • If you change the sound-system to None in Blender's System Preferences, does this still happen?... (Also worth testing if SDL for example has the same issue).
  • Does this happen every time, if you add a second image texture does it happen again?
  • Does saving the image as a PNG and loading that cause the same issue?
Please give exact details on what is happening. - Is this playing sound through your audio system? - How long does it play for, what kind of sound is it? - If you change the sound-system to **None** in Blender's System Preferences, does this still happen?... (Also worth testing if `SDL` for example has the same issue). - Does this happen every time, if you add a second image texture does it happen again? - Does saving the image as a PNG and loading that cause the same issue?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Hi Campbell

  1. Yes
  2. 3 Marks, kind of Windows system sound
  3. None, SDL or OpenAL make no difference, sound always play after loading image
  4. Yes
  5. No, save image as png with paint and loading does not play sound
Hi Campbell 1. Yes 2. 3 Marks, kind of Windows system sound 3. None, SDL or OpenAL make no difference, sound always play after loading image 4. Yes 5. No, save image as png with paint and loading does not play sound

Some more Q's

  • does this happening opening the JPEG in the image window.
  • if you re-save the image (open and save as JPEG with new name)
  • if you save the blend file and load it again... does it happen on load (since it must load the image to display it)

Also, you didnt say how long the plays for.

Some more Q's - does this happening opening the JPEG in the image window. - if you re-save the image (open and save as JPEG with new name) - if you save the blend file and load it again... does it happen on load (since it must load the image to display it) Also, you didnt say how long the plays for.

Added subscriber: @kopias

Added subscriber: @kopias

confirmed on buildbot Blender-2.75.0-git.7fab7b6-AMD64

its standard "Beep" everytime when you load only "this" image

mingw-w64 builds dont have this issue

confirmed on buildbot Blender-2.75.0-git.7fab7b6-AMD64 its standard "Beep" everytime when you load only "this" image mingw-w64 builds dont have this issue
Campbell Barton changed title from Image texture create sound to Loading certain Jpeg causes system alert sound (Win32) 2015-09-09 12:04:16 +02:00

This issue was referenced by 42e15b9dd3

This issue was referenced by 42e15b9dd3ea8f6625d985190aa445b512cc3812

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46051
No description provided.