Fix T46051: Loading certain Jpeg causes system alert sound (Win32)

The issue was caused by RedCode library printing binary string to the terminal.